--- a/src/components/Container/Homepage/style.css
+++ b/src/components/Container/Homepage/style.css
@@ -1,3 +1,7 @@
 #homepage{
     background-color: #c3c3c3;
 }
+
+#name-surname{
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
