pages scroll animates configured

--- a/src/components/Container/Contact/style.css
+++ b/src/components/Container/Contact/style.css
@@ -1,11 +1,5 @@
-.animate-me-top {
-    transform: translateX(30rem); 
-    opacity: 0; 
-    transition: transform 1s ease, opacity 1s ease; 
-  }
-
-  .animate-me-bottom {
-    transform: translateY(30rem); 
-    opacity: 0; 
-    transition: transform 1s ease, opacity 1s ease; 
-  }
+.animate-me-contact {
+  transform: translateY(5rem);
+  opacity: 0;
+  transition: transform 1s ease, opacity 1s ease;
+}
