--- a/src/components/Container/Projects/style.css
+++ b/src/components/Container/Projects/style.css
@@ -1,5 +1,5 @@
 .animate-me-projects {
-    transform: translateX(5rem); 
+    transform: translateY(5rem); 
     opacity: 0; 
     transition: transform 1s ease, opacity 1s ease; 
   }
