--- a/src/components/Container/AboutMe/style.css
+++ b/src/components/Container/AboutMe/style.css
@@ -3,3 +3,19 @@
   opacity: 0; /* Başlangıçta saydam olsun */
   transition: transform 1s ease, opacity 1s ease; /* Geçiş süresini artır */
 }
+
+.aboutMeComponent {
+  background: #0f2027; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to bottom,
+    #2c5364,
+    #203a43,
+    #0f2027
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to bottom,
+    #2c5364,
+    #203a43,
+    #0f2027
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
