--- a/src/components/Container/Projects/style.css
+++ b/src/components/Container/Projects/style.css
@@ -1,5 +1,21 @@
 .animate-me-projects {
-    transform: translateY(5rem); 
-    opacity: 0; 
-    transition: transform 1s ease, opacity 1s ease; 
-  }
+  transform: translateY(5rem);
+  opacity: 0;
+  transition: transform 1s ease, opacity 1s ease;
+}
+
+.projectsComponent {
+  background: #0f2027; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to top,
+    #2c5364,
+    #203a43,
+    #0f2027
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to top,
+    #2c5364,
+    #203a43,
+    #0f2027
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
